--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -1,12 +1,12 @@
 :root {
   /* primitives */
   /* font-family */
-  --font-sans: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  --font-sans: 'Gothic A1', sans-serif, BlinkMacSystemFont, 'Segoe UI',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
   --font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
     'Courier New', monospace;
-  --font-serif: 'Times New Roman', Times, serif;
+  --font-serif: 'EB Garamond', serif;
 
   /* palette */
   --white: #fff;
