--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Gothic+A1:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Gothic+A1:wght@300;400;500&display=swap');
 
 html {
   scroll-behavior: smooth;
