--- a/src/components/expertise.module.css
+++ b/src/components/expertise.module.css
@@ -5,7 +5,7 @@
   display: grid;
   grid-auto-flow: row dense;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 1em 0px;
 }
 
