--- a/src/components/expertise.module.css
+++ b/src/components/expertise.module.css
@@ -3,9 +3,9 @@
   padding: 0;
   list-style: none;
   display: grid;
-  grid-auto-flow: row dense;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-rows: auto;
   gap: 1em 0px;
 }
 
