--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -14,7 +14,7 @@
     the viewport width
   */
   height: 61.8vh;
-  max-height: 560px;
+  max-height: 660px;
   width: 100%;
 }
 
@@ -33,6 +33,7 @@
   font-weight: var(--extrabold);
   line-height: var(--solid);
   margin: 0 0 var(--space-xl);
+  color: var(--primary);
 }
 
 .content {
