--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -12,6 +12,9 @@
   list-style: none;
   margin: 0;
   gap: var(--space-xl);
+  position: fixed;
+  right: 0;
+  padding-right: var(--size-gutter);
 }
 
 .navigationItem {
