--- a/src/components/expertise.module.css
+++ b/src/components/expertise.module.css
@@ -4,13 +4,15 @@
   list-style: none;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: auto;
   grid-auto-rows: auto;
   gap: 1em 0px;
 }
-.expertise-list .expertise-item {
-  margin: 0 0 10rem 0;
+.expertise-item {
+  min-height: 100vh;
+  height: fit-content;
 }
+
 
 .title {
   display: inline-block;
@@ -26,7 +28,10 @@
   padding-top: 3px;
   border-bottom: 2px solid #000;
 }
-
+.body {
+  height: 100%;
+  position: relative;
+}
 .link {
   text-decoration: none;
 }
