--- a/src/components/global.css
+++ b/src/components/global.css
@@ -18,6 +18,7 @@ body {
   margin: 0;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
 }
 
 img {
