--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,10 +1,16 @@
 .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   max-width: var(--size-max-width);
   align-items: center;
   margin: 0 auto;
   padding: var(--space-2xl) var(--size-gutter);
+  width: 100%;
+  background: var(--background);
+  z-index: 1;
+  position: fixed;
+  top: 0;
+
 }
 
 .navigation {
@@ -12,9 +18,10 @@
   list-style: none;
   margin: 0;
   gap: var(--space-xl);
-  position: fixed;
-  right: 0;
+  float: right;
   padding-right: var(--size-gutter);
+  z-index: 2;
+
 }
 
 .navigationItem {
