--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -3,14 +3,14 @@
   justify-content: flex-end;
   max-width: var(--size-max-width);
   align-items: center;
-  margin: 0 auto;
-  padding: var(--space-2xl) var(--size-gutter);
+  padding: 1rem 0;
   width: 100%;
   background: var(--background);
   z-index: 1;
   position: fixed;
   top: 0;
-
+  left: 0;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
 .navigation {
