--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -6,7 +6,7 @@
     'Segoe UI Symbol';
   --font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
     'Courier New', monospace;
-  --font-serif: 'Noto Serif', serif;
+  --font-serif: 'Cardo', serif;
 
   /* palette */
   --white: #fff;
