--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -9,10 +9,17 @@
 
 .title {
   display: inline-block;
-  font-size: var(--text-lg);
+  font-size: var(--text-3xl);
   margin-bottom: var(--space-xs);
   margin-top: var(--space-lg);
   border-bottom: 1.5px solid transparent;
+}
+.title::after {
+  content: '';
+  display: block;
+  width: 52px;
+  padding-top: 3px;
+  border-bottom: 2px solid #000;
 }
 
 .link {
