--- a/src/components/article-preview.module.css
+++ b/src/components/article-preview.module.css
@@ -4,13 +4,19 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
-  grid-gap: var(--space-3xl);
+  grid-gap: var(--space-2xl);
+}
+.article a {
+  color:var(--primary);
+}
+.article a:hover {
+  text-decoration: underline;
 }
 
 .title {
   display: inline-block;
   font-size: var(--text-3xl);
-  margin-bottom: var(--space-xs);
+  margin-bottom: var(--space-lg);
   margin-top: var(--space-lg);
   border-bottom: 1.5px solid transparent;
 }
@@ -31,6 +37,7 @@
 }
 
 .meta {
+  padding-top: 0.5rem;
   display: flex;
   justify-content: space-between;
 }
